--- a/MMP/quiz/quiz/view/About.fxml
+++ b/MMP/quiz/quiz/view/About.fxml
@@ -21,17 +21,17 @@
             <Insets right="169.5" />
          </padding>
       </ButtonBar>
-      <Label layoutX="14.0" layoutY="62.0" prefHeight="72.0" prefWidth="273.0" text="• On the main menu select the “Select Quiz” button. " textAlignment="JUSTIFY" wrapText="true">
+      <Label layoutX="14.0" layoutY="62.0" prefHeight="72.0" prefWidth="273.0" text="On the main menu select the 'Select Quiz' button " textAlignment="JUSTIFY" wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="134.0" prefHeight="124.0" prefWidth="273.0" text="• It will open a file dialog where you can select the quiz or navigate to the location where the quiz text file is stored. " textAlignment="JUSTIFY" wrapText="true">
+      <Label layoutX="14.0" layoutY="134.0" prefHeight="124.0" prefWidth="273.0" text="It will open a file dialog where you can select the quiz or navigate to the location where the quiz text file is stored. " textAlignment="JUSTIFY" wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="258.0" prefHeight="85.0" prefWidth="273.0" text="• Once found select the quiz and it will load automatically on to the quiz screen" wrapText="true">
+      <Label layoutX="14.0" layoutY="258.0" prefHeight="85.0" prefWidth="273.0" text="Once found select the quiz and it will load automatically on to the quiz screen" wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
@@ -41,12 +41,12 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Label>
-      <Label layoutX="309.0" layoutY="62.0" prefHeight="85.0" prefWidth="292.0" text="• Read the question and select the answer from the options you believe to be correct" textAlignment="JUSTIFY" wrapText="true">
+      <Label layoutX="309.0" layoutY="62.0" prefHeight="85.0" prefWidth="292.0" text="Read the question and select the answer from the options you believe to be correct" textAlignment="JUSTIFY" wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="309.0" layoutY="147.0" prefHeight="85.0" prefWidth="292.0" text="• Your score will be shown at the end of the quiz with an option to revisit incorrect questions. " textAlignment="JUSTIFY" wrapText="true">
+      <Label layoutX="309.0" layoutY="147.0" prefHeight="85.0" prefWidth="292.0" text="Your score will be shown at the end of the quiz with an option to revisit incorrect questions. " textAlignment="JUSTIFY" wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
@@ -64,7 +64,7 @@
       </Label>
       <ButtonBar layoutX="19.0" layoutY="320.0" prefHeight="72.0" prefWidth="418.0">
          <buttons>
-            <Button fx:id="bMenu" alignment="CENTER" graphicTextGap="0.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#bMenu" pickOnBounds="false" prefHeight="30.0" prefWidth="250.0" style="-fx-background-color: #3c5d5d; -fx-background-radius: 5; -fx-text-fill: #1a1a1a;" text="Main Menu" wrapText="true">
+            <Button fx:id="buttonMenu" alignment="CENTER" graphicTextGap="0.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#buttonMenu" pickOnBounds="false" prefHeight="30.0" prefWidth="250.0" style="-fx-background-color: #3c5d5d; -fx-background-radius: 5; -fx-text-fill: #1a1a1a;" text="Main Menu" wrapText="true">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
