--- a/MMP/quiz/quiz/view/QuizView.fxml
+++ b/MMP/quiz/quiz/view/QuizView.fxml
@@ -73,6 +73,7 @@
               <buttons>
                   <Button fx:id="buttonNext" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" minWidth="100.0" mnemonicParsing="false" onAction="#buttonNext" prefWidth="100.0" text="Next" textAlignment="CENTER" />
                   <Button fx:id="buttonSkip" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" minWidth="100.0" mnemonicParsing="false" onAction="#buttonSkip" prefWidth="100.0" text="Skip" textAlignment="CENTER" />
+                  <Button fx:id="buttonBack" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" minWidth="100.0" mnemonicParsing="false" onAction="#buttonBack" prefWidth="100.0" text="Back" textAlignment="CENTER" />
               </buttons>
                <padding>
                   <Insets left="170.0" right="180.0" />
