--- a/MMP/quiz/quiz/view/QuizView.fxml
+++ b/MMP/quiz/quiz/view/QuizView.fxml
@@ -89,5 +89,7 @@
             <ProgressBar fx:id="progressBar" accessibleHelp="Progress" maxHeight="15.0" minHeight="5.0" mouseTransparent="true" pickOnBounds="false" prefHeight="15.0" prefWidth="540.0" progress="0.0" GridPane.columnSpan="3" GridPane.rowIndex="3" />
          </children>
       </GridPane>
+      <Button fx:id="bigger" layoutY="2.0" mnemonicParsing="false" onAction="#buttonBig" text="Increase text size" textAlignment="CENTER" />
+      <Button fx:id="smaller" layoutX="508.0" layoutY="2.0" mnemonicParsing="false" onAction="#buttonSmall" text="Decrease text size" textAlignment="CENTER" />
    </children>
 </AnchorPane>
