--- a/MMP/quiz/quiz/view/QuizView.fxml
+++ b/MMP/quiz/quiz/view/QuizView.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -28,9 +30,9 @@
             <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+            <AnchorPane prefHeight="200.0" prefWidth="540.0">
                <children>
-                  <Label fx:id="question" layoutX="52.0" layoutY="26.0" text="Label" wrapText="true">
+                  <Label fx:id="question" layoutX="52.0" layoutY="39.0" text="Label" wrapText="true">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -65,6 +67,7 @@
                            <font>
                               <Font size="14.0" />
                            </font></RadioButton>
+                        <RadioButton fx:id="optionG" layoutX="224.0" layoutY="103.0" mnemonicParsing="false" text="RadioButton" visible="false" />
                      </children>
                   </AnchorPane>
                </children>
@@ -79,17 +82,30 @@
  
  
               </buttons>
-               <padding>
-                  <Insets right="75.0" />
-               </padding>
                <GridPane.margin>
-                  <Insets right="40.0" />
+                  <Insets />
                </GridPane.margin>
+               <padding>
+                  <Insets right="165.0" />
+               </padding>
             </ButtonBar>
             <ProgressBar fx:id="progressBar" accessibleHelp="Progress" maxHeight="15.0" minHeight="5.0" mouseTransparent="true" pickOnBounds="false" prefHeight="15.0" prefWidth="540.0" progress="0.0" GridPane.columnSpan="3" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Button fx:id="bigger" layoutY="2.0" mnemonicParsing="false" onAction="#buttonBig" text="Increase text size" textAlignment="CENTER" />
-      <Button fx:id="smaller" layoutX="508.0" layoutY="2.0" mnemonicParsing="false" onAction="#buttonSmall" text="Decrease text size" textAlignment="CENTER" />
+      <Button fx:id="bigger" layoutX="30.0" layoutY="2.0" mnemonicParsing="false" onAction="#buttonBig" text="Increase text size" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="reset" layoutX="464.0" layoutY="2.0" mnemonicParsing="false" onAction="#buttonReset" prefHeight="25.0" prefWidth="106.0" text="Reset text size" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="27.0" fitWidth="29.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@magnify.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
