--- a/MMP/quiz/quiz/view/MainMenuView.fxml
+++ b/MMP/quiz/quiz/view/MainMenuView.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -121,6 +122,11 @@
                   </Button>
                </buttons>
             </ButtonBar>
+            <CheckBox fx:id="assessment" mnemonicParsing="false" onAction="#checkEvent" text="Assessment mode" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="225.0" top="75.0" />
+               </GridPane.margin>
+            </CheckBox>
          </children>
       </GridPane>
    </children>
