--- a/MMP/quiz/quiz/view/QuizView.fxml
+++ b/MMP/quiz/quiz/view/QuizView.fxml
@@ -30,15 +30,6 @@
             <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="540.0">
-               <children>
-                  <Label fx:id="question" layoutX="52.0" layoutY="39.0" text="Label" wrapText="true">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
             <Group GridPane.rowIndex="1">
                <children>
                   <AnchorPane prefHeight="200.0" prefWidth="542.0">
@@ -85,19 +76,27 @@
                </padding>
             </ButtonBar>
             <ProgressBar fx:id="progressBar" accessibleHelp="Progress" maxHeight="15.0" minHeight="5.0" mouseTransparent="true" pickOnBounds="false" prefHeight="15.0" prefWidth="540.0" progress="0.0" GridPane.columnSpan="3" GridPane.rowIndex="3" />
+            <Label fx:id="question" text="Label" wrapText="true">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets top="50.0" />
+               </GridPane.margin>
+            </Label>
          </children>
       </GridPane>
-      <Button fx:id="bigger" layoutX="30.0" layoutY="2.0" mnemonicParsing="false" onAction="#buttonBig" text="Increase text size" textAlignment="CENTER">
+      <Button fx:id="bigger" layoutY="2.0" mnemonicParsing="false" onAction="#buttonBig" text="Increase text size" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="reset" layoutX="464.0" layoutY="2.0" mnemonicParsing="false" onAction="#buttonReset" prefHeight="25.0" prefWidth="106.0" text="Reset text size" textAlignment="CENTER">
+      <Button fx:id="reset" layoutX="494.0" layoutY="2.0" mnemonicParsing="false" onAction="#buttonReset" prefHeight="25.0" prefWidth="106.0" text="Reset text size" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <ImageView fitHeight="27.0" fitWidth="29.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="27.0" fitWidth="29.0" layoutX="113.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@magnify.png" />
          </image>
