--- a/MMP/quiz/quiz/view/QuizView.fxml
+++ b/MMP/quiz/quiz/view/QuizView.fxml
@@ -58,7 +58,7 @@
                            <font>
                               <Font size="14.0" />
                            </font></RadioButton>
-                        <RadioButton fx:id="optionG" layoutX="224.0" layoutY="103.0" mnemonicParsing="false" text="RadioButton" visible="false" />
+                        <RadioButton fx:id="optionG" layoutX="224.0" layoutY="103.0" mnemonicParsing="false" onAction="#rbClicked" text="RadioButton" visible="false" />
                      </children>
                   </AnchorPane>
                </children>
